search box, all fields rqd, z-index, text issues

--- a/static/styles/placelit.scss
+++ b/static/styles/placelit.scss
@@ -829,7 +829,7 @@ body { height: $full; margin:0%; padding:0; }
 }
 .tall-map-window{
   @extend .map-window;
-  height: 500px;
+  height: 463px;
   width: 44%;
   min-width: 180px;
   right: 4%;
@@ -891,7 +891,7 @@ body { height: $full; margin:0%; padding:0; }
   color: white;
   position: absolute;
   z-index: 11;
-  margin-top: -5px;
+  margin-top: 0px;
   background-color: #5a5a5a;
   width: 206px;
   display: none;
@@ -1137,9 +1137,10 @@ input[type="checkbox"], input[type="radio"] {
 }
 
 .tall-map-window {
-    height: 500px;
+    height: 463px;
     width: 45%;
     min-width: 180px;
+	padding-top: 20px;
 }
 
 .window-container {
@@ -1211,6 +1212,12 @@ input[type="checkbox"], input[type="radio"] {
     width: 100%;
     height: 60px;
     z-index: 99;
+}
+
+.allfields {
+	text-align: center;
+	font-size: .8em;
+	font-weight: bold;
 }
 
 // This is the hamburger menu code!
